-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.6.4
=====
- orm
  - Moving an o2m object from one collection to
    another, or vice versa changing the referenced
    object by an m2o, where the foreign key is also a
    member of the primary key, will now be more
    carefully checked during flush if the change in
    value of the foreign key on the "many" side is the
    result of a change in the primary key of the "one"
    side, or if the "one" is just a different object.
    In one case, a cascade-capable DB would have
    cascaded the value already and we need to look at
    the "new" PK value to do an UPDATE, in the other we
    need to continue looking at the "old". We now look
    at the "old", assuming passive_updates=True,
    unless we know it was a PK switch that
    triggered the change. [ticket:1856]
    
  - The value of version_id_col can be changed 
    manually, and this will result in an UPDATE
    of the row.  Versioned UPDATEs and DELETEs
    now use the "committed" value of the 
    version_id_col in the WHERE clause and
    not the pending changed value. The 
    version generator is also bypassed if 
    manual changes are present on the attribute.
    [ticket:1857]

  - Repaired the usage of merge() when used with 
    concrete inheriting mappers.  Such mappers frequently
    have so-called "concrete" attributes, which are
    subclass attributes that "disable" propagation from
    the parent - these needed to allow a merge()
    operation to pass through without effect.
    
- sql
  - Changed the scheme used to generate truncated
    "auto" index names when using the "index=True"
    flag on Column.   The truncation only takes
    place with the auto-generated name, not one
    that is user-defined (an error would be 
    raised instead), and the truncation scheme 
    itself is now based on a fragment of an md5
    hash of the identifier name, so that multiple
    indexes on columns with similar names still