@@ -6,6 +6,15 @@ CHANGES
 0.6.4
 =====
 - orm
+  - The name ConcurrentModificationError has been
+    changed to StaleDataError, and descriptive 
+    error messages have been revised to reflect
+    exactly what the issue is.   Both names will
+    remain available for the forseeable future
+    for schemes that may be specifying 
+    ConcurrentModificationError in an "except:"
+    clause.
+    
   - Moving an o2m object from one collection to
     another, or vice versa changing the referenced
     object by an m2o, where the foreign key is also a
